# zap-tunnel

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  rust.yml
client/: Cargo.toml  README.md
client/src/: api.rs  async.rs  blocking.rs  lib.rs
lnd_client/: .gitignore  Cargo.toml  Dockerfile  README.md
lnd_client/src/: api.rs  app.rs  config.rs  fileserv.rs  lib.rs  main.rs  models.rs
lnd_client/style/: dark.min.css  main.scss
server/: .gitignore  Cargo.toml
server/migrations/2023-03-22-204407_baseline/: down.sql  up.sql
server/src/: config.rs  main.rs  nostr.rs  router.rs  style.css  subscriber.rs  subscribers.rs
server/src/models/: invoice.rs  mod.rs  schema.rs  user.rs  zap.rs
server/src/routes/: add_invoices.rs  check_user.rs  create_user.rs  lnurlp.rs  mod.rs
