[package]
name = "zap-tunnel-client"
version = "0.1.0"
edition = "2018"
authors = ["Ben Carman <benthecarman@live.com>"]
license = "MIT"
homepage = "https://github.com/benthecarman/zap-tunnel/"
repository = "https://github.com/benthecarman/zap-tunnel/"
readme = "README.md"
documentation = "https://docs.rs/zap-tunnel/"
description = "A way to do lnurl-pay with a lightning proxy"
keywords = ["lightning", "bitcoin", "lnurl"]

[lib]
name = "zap_tunnel_client"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.5.0", features = ["json"], optional = true }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
lightning-invoice = { version = "0.24.0", default-features = false, features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
bitcoin = { version = "0.29.2", features = ["serde", "std"] }
lightning-invoice = { version = "0.24.0", features = ["std"] }
# zip versions after 0.6.3 don't work with our MSRV 1.57.0
zip = "=0.6.3"
# base64ct versions at 1.6.0 and higher have MSRV 1.60.0
base64ct = "<1.6.0"

[features]
default = ["blocking", "async", "async-https"]
blocking = ["ureq", "ureq/socks"]
async = ["reqwest", "reqwest/socks"]
async-https = ["reqwest/default-tls"]
