[package]
name = "zap-tunnel-lnd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.24", features = ["derive"] }
bitcoin = { version = "0.29.2", features = ["serde", "std"] }
lightning-invoice = { version = "0.22.0", features = ["std"] }
home = "0.5.4"
tokio = "1"
tonic_openssl_lnd = "0.2.0"
url = {version = "2.3.1", features = ["serde"]}
zap-tunnel-client = { path = "../client", default-features = false, features = ["blocking"] }
