[package]
edition = "2021"
name = "zap-tunnel"
version = "0.1.0"

[[bin]]
name = "zap-tunnel"
path = "src/main.rs"

[dependencies]
axum = "0.5.17"
clap = { version = "4.0.24", features = ["derive"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
dioxus = { version = "0.2.4", features = ["ssr"] }
home = "0.5.4"
lightning-invoice = "0.22.0"
nostr = "0.19.5"
tonic_openssl_lnd = "0.2.0"
tokio = "1"
tokio-stream = "0.1.11"
