[package]
edition = "2021"
name = "zap-tunnel"
version = "0.1.0"

[[bin]]
name = "zap-tunnel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.12"
clap = { version = "4.0.24", features = ["derive"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
diesel = { version = "2.0", features = ["sqlite", "r2d2", "numeric"] }
diesel_migrations = "2.0.0"
dioxus = { version = "0.2.4", features = ["ssr"] }
home = "0.5.4"
lightning = "0.0.114"
lightning-invoice = { version = "0.22.0", features = ["serde"] }
lnurl-rs = { git = "https://github.com/benthecarman/lnurl-rs", default-features = false }
nostr = "0.19.5"
nostr-sdk = "0.19.1"
tonic_openssl_lnd = "0.2.0"
tokio = "1"
tokio-stream = "0.1.11"
serde = "1.0"
zap-tunnel-client = { path = "../client", default-features = false }
