[package]
edition = "2021"
name = "zap-tunnel"
version = "0.1.0"

[[bin]]
name = "zap-tunnel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.12"
clap = { version = "4.1.14", features = ["derive"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
diesel = { version = "2.0", features = ["sqlite", "r2d2", "numeric"] }
diesel_migrations = "2.0.0"
dioxus = { version = "0.3.2" }
dioxus-ssr = { version = "0.3.0" }
home = "0.5.4"
lightning = "0.0.115"
lightning-invoice = { version = "0.23.0", features = ["serde"] }
lnurl-rs = { version = "0.2.4", default-features = false }
nostr = { version = "=0.22.0-bitcoin-v0.29" }
nostr-sdk = { version = "=0.22.0-bitcoin-v0.29" }
tonic_openssl_lnd = "0.2.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.11"
serde = "1.0"
serde_json = "1.0"
zap-tunnel-client = { path = "../client", default-features = false }
